Finzor feature section card alignment and product on scroll hastag fixing completed

--- a/assets/css/features.css
+++ b/assets/css/features.css
@@ -30,9 +30,9 @@
   flex-direction: column;
   grid-area: 1/1/2/2;
   border-radius: 8px;
-  padding: 2.5rem;
+  padding: 0rem;
   position: absolute;
-  height: 41.625rem;
+  height: 43rem;
   will-change: transform;
   background-color: #1a2c2a;
   box-shadow: 0px 0px 8px rgba(16, 106, 64, 0.3607843137);
@@ -55,7 +55,7 @@
       #1A2C2A 100%
       );
   border: solid 1px transparent;
-  --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
+  --gradient-border: conic-gradient(from var(--border-angle), rgba(2, 237, 104, 0) 7.95474deg, rgb(34 254 179) 77.822552deg, rgba(10, 10, 10, 0) 182.574207deg, rgba(10, 10, 10, 0) 204.015297deg, #f7c35f 258.393755deg, rgba(0, 157, 255, 0) 354.246679deg);
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
   background-position: center center;
   animation: bg-spin 4s linear infinite;
@@ -84,9 +84,9 @@
     width: 100%;
   }
 }
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 1600px) {
   .panel__stack .panel__card {
-    height: 36rem;
+    height: 34rem;
   }
 }
 
@@ -109,10 +109,6 @@
 
 .panel__stack .panel__card:nth-child(4) {
   animation-delay: 1.5s;
-}
-
-.panel__stack .panel__card.panel__card {
-  height: 43rem;
 }
 
 .panel__stack .panel__card:first-child {
@@ -268,13 +264,18 @@
   align-items: center;
 }
 .panel .panel__options span {
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 22px;
+  font-weight: 400;
   line-height: 36px;
   color: #ffffff;
   padding: 12px 0;
   transition: all 0.5s ease;
   margin-bottom: 20px;
+}
+@media screen and (max-width: 1600px) {
+  .panel .panel__options span {
+    margin-bottom: 0;
+  }
 }
 @media screen and (max-width: 1199px) {
   .panel .panel__options {
@@ -283,10 +284,10 @@
 }
 .panel .panel__stack .panel__card h2 {
   color: #ffffff;
-  font-size: 26px;
+  font-size: 20px;
   font-weight: 600;
   line-height: 32px;
-  margin-bottom: 30px;
+  margin: 20px 35px;
 }
 @media screen and (max-width: 991px) {
   .panel .panel__stack .panel__card h2 {
@@ -336,9 +337,9 @@
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay {
   border-radius: 8px;
   width: 33.3%;
-  background: url("/assets/images/subtract.svg");
   background-repeat: no-repeat;
-  min-height: 480px;
+  padding: 0px 50px;
+  position: relative;
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay {
@@ -365,7 +366,7 @@
   }
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div {
-  padding: 20px;
+  padding: 0px;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 }
@@ -389,9 +390,9 @@
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div p {
   color: #ffffff;
   font-size: 16px;
-  font-weight: 400;
-  line-height: 25px;
-  min-height: 75px;
+  font-weight: 200;
+  line-height: 22px;
+  min-height: 60px;
 }
 @media screen and (max-width: 767px) {
   .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div p {
@@ -402,7 +403,7 @@
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div a {
   display: none;
   color: #3eab90;
-  font-size: 18px;
+  font-size: 14px;
   text-decoration: none;
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div div {
@@ -410,4 +411,8 @@
   justify-content: space-between;
   padding-left: 0;
   padding-right: 0;
+}
+.panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div div img {
+  width: 30px;
+  height: 50px;
 }
