--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -47,9 +47,6 @@
 .faq_section .faq_section .accordion-button::after {
   background-color: #ffffff;
 }
-.faq_section .accordion-item:not(:first-of-type) {
-  border-top: 1px solid #3eab90 !important;
-}
 .faq_section .accordion-item .accordion-header .accordion-button {
   position: relative;
   top: 2px;
@@ -80,8 +77,17 @@
 .faq_section .accordion-item {
   margin-bottom: 20px;
   border-radius: 16px;
-  border: 1px solid #3eab90;
+  border: 1px solid #1a2c2a;
   background-color: #000000 !important;
+}
+.faq_section .accordion-item:hover {
+  border: solid 1px transparent;
+  --border-angle: 0turn;
+  --main-bg: conic-gradient(from var(--border-angle), #000 0%, rgb(0, 0, 0) 100%);
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  background-position: center center;
+  animation: bg-spin 5s linear infinite;
 }
 .faq_section .accordion-body {
   font-size: 14px;
@@ -92,9 +98,6 @@
 }
 .faq_section .accordion-button:not(.collapsed) {
   box-shadow: none;
-}
-.faq_section .accordion-item:not(:first-of-type) {
-  border-top: #3eab90;
 }
 .faq_section .accordion-item .accordion-header .accordion-button:focus {
   box-shadow: none;
