--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -38,7 +38,7 @@
   fill: #3eab90;
 }
 .footer_section .col-lg-4 p {
-  color: #ffffff;
+  color: #5c5c5c;
   padding: 20px 0px 10px;
   font-weight: 400;
   font-size: 14px;
@@ -49,7 +49,7 @@
   }
 }
 .footer_section .col-lg-4 a {
-  color: #ffffff;
+  color: #5c5c5c;
   text-decoration: none;
   padding-top: 10px;
   font-size: 14px;
@@ -74,7 +74,7 @@
   padding-left: 20px;
 }
 .footer_section h5 {
-  color: #ffffff;
+  color: #5c5c5c;
   font-size: 22px;
   line-height: 24px;
   font-weight: 500;
@@ -100,7 +100,7 @@
   }
 }
 .footer_section li a {
-  color: #ffffff;
+  color: #5c5c5c;
   font-size: 14px;
   font-weight: 400;
   line-height: 22px;
@@ -118,7 +118,7 @@
   align-items: center;
 }
 .footer_section .copy_rights .copy_rights_1 {
-  color: #ffffff;
+  color: #5c5c5c;
 }
 .footer_section .copy_rights .copy_rights_1 p {
   margin: 0;
@@ -134,7 +134,7 @@
   display: inline-block;
   text-align: center;
   border-radius: 50%;
-  background: #1a2c2a;
+  background: rgba(32, 39, 44, 0.4117647059);
   line-height: 35px;
 }
 .footer_section .copy_rights .copy_rights_1.fz_social_icon a:hover {
