--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -241,7 +241,7 @@ header .fz_sigin ul li:last-child a {
   --text-color: rgb(210 210 240);
   --box-glow-color: transparent;
   --box-glow-blur: 20px;
-  --color: #00afaf;
+  --color: #00afaf85;
   position: relative;
   min-width: var(--w);
   min-height: var(--h);
@@ -252,7 +252,7 @@ header .fz_sigin ul li:last-child a {
   border: none;
   color: var(--text-color);
   background: rgba(4, 8, 20, 0.8);
-  box-shadow: 0px 5px 0 0px rgba(62, 171, 144, 0.431372549), 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px rgba(29, 77, 45, 0.3607843137);
+  box-shadow: 0px 3px 0 0px #017f53, 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px rgba(29, 77, 45, 0.3607843137);
   overflow: hidden;
   cursor: pointer;
   transition: box-shadow 500ms ease;
@@ -265,7 +265,7 @@ header .fz_sigin ul li:last-child a {
   content: "";
   position: absolute;
   inset: 0;
-  background: #1a2c2a;
+  background: #0d1918;
   box-shadow: inset 0 0px 24px 0 rgba(170, 230, 250, 0.12);
   border-radius: var(--h);
   z-index: 1;
