--- a/assets/css/sass/features.scss
+++ b/assets/css/sass/features.scss
@@ -20,9 +20,9 @@
     flex-direction: column;
     grid-area: 1/1/2/2;
     border-radius: 8px;
-    padding: 2.5rem;
+    padding: 0rem;
     position: absolute;
-    height: 41.625rem;
+    height: 43rem;
     will-change: transform;
     background-color: $tertiary-color;
     box-shadow: 0px 0px 8px #106a405c;
@@ -55,8 +55,8 @@
       width: 100%;
      
     }
-    @media screen and (max-width: 1440px) {
-      height: 36rem;
+    @media screen and (max-width: 1600px) {
+      height: 34rem;
     }
   }
   @property --border-angle {
@@ -79,9 +79,9 @@
   // .panel__stack .panel__card.panel__card--one {
   //   height: 43rem;
   // }
-  .panel__stack .panel__card.panel__card {
-    height: 43rem;
-  }
+  // .panel__stack .panel__card.panel__card {
+  //   height: 34rem;
+  // }
   .panel__stack .panel__card:first-child {
     top: calc(var(--spacer) * 1);
     z-index: 1;
@@ -221,13 +221,16 @@
         gap: 40px;
         align-items: center;
         span {
-            font-size: 20px;
-            font-weight: 600;
+            font-size: 22px;
+            font-weight: 400;
             line-height: 36px;
             color: $white;
             padding: 12px 0; 
             transition: all 0.5s ease;
             margin-bottom: 20px;
+        @media screen and (max-width: 1600px) {
+              margin-bottom: 0;
+            }
         }
         @media screen and (max-width: 1199px) {
           display: none;
@@ -237,10 +240,10 @@
         .panel__card {
             h2 {
                 color: $white;
-                font-size: 26px;
+                font-size: 20px;
                 font-weight: 600;
                 line-height: 32px;
-                margin-bottom: 30px;
+                margin: 20px 35px;
                 @media screen and (max-width: 991px) {
                   font-size: 30px;
                   line-height: 36px;
@@ -282,9 +285,11 @@
                     .item-pay {
                         border-radius: 8px;
                         width: 33.3%;
-                        background: url('/assets/images/subtract.svg');
+                        // background: url('/assets/images/subtract.svg');
                         background-repeat: no-repeat;
-                        min-height: 480px;
+                        // min-height: 480px;
+                        padding: 0px 50px;
+                        position: relative;
                         
                         @media screen and (min-width: 768px) and (max-width: 991px) {
                           width: calc(50% - 20px);
@@ -306,7 +311,7 @@
             
                         }
                         div {
-                            padding: 20px;
+                            padding: 0px;
                             border-bottom-left-radius: 8px;
                             border-bottom-right-radius: 8px;
                             @media screen and (min-width: 991px) and (max-width: 1400px) {
@@ -325,9 +330,9 @@
                             p {
                                 color: $white;
                                 font-size: 16px;
-                                font-weight: 400;
-                                line-height: 25px;
-                                min-height: 75px;
+                                font-weight: 200;
+                                line-height: 22px;
+                                min-height: 60px;
                                 @media screen and (max-width: 767px) {
                                   font-size: 14px;
                                   line-height: 20px;
@@ -336,7 +341,7 @@
                             a {
                                 display: none;
                                 color: $primary-color;
-                                font-size: 18px;
+                                font-size: 14px;
                                 text-decoration: none;
                             }
                             div {
@@ -344,6 +349,10 @@
                               justify-content: space-between;
                               padding-left: 0;
                               padding-right: 0;
+                              img {
+                                width: 30px;
+                                height: 50px;
+                              }
                             }
                         }
                     }
