--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -258,7 +258,7 @@ header {
     --text-color: rgb(210 210 240);
     --box-glow-color: transparent;
     --box-glow-blur: 20px;
-    --color: #00afaf;
+    --color: #00afaf85;
     position: relative;
     min-width: var(--w);
     min-height: var(--h);
@@ -269,7 +269,7 @@ header {
     border: none;
     color: var(--text-color);
     background: rgb(4 8 20 / 0.8);
-    box-shadow: 0px 5px 0 0px #3eab906e, 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px #1d4d2d5c;
+    box-shadow: 0px 3px 0 0px #017f53, 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px rgba(29, 77, 45, 0.3607843137);
     overflow: hidden;
     cursor: pointer;
     transition: box-shadow 500ms ease;
@@ -282,7 +282,7 @@ header {
 	content: "";
 	position: absolute;
 	inset: 0;
-	background:#1a2c2a;
+	background:#0d1918;
 	box-shadow: inset 0 0px 24px 0 rgb(170 230 250 / 0.12);
 	border-radius: var(--h);
 	z-index: 1;
