--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -11,7 +11,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding-top: 120px;
+      padding-top: 178px;
       gap: 24px;
       .fz_sub_container {
         display: flex;
@@ -33,14 +33,16 @@
             transition: all 0.5s ease-in;
             h2 {
               font-family: "Montserrat", sans-serif;
-              font-size: 128px;
+              font-size: 60px;
               font-weight: 600;
-              color: $white;
-              padding-top: 18px;
+              color: $black;
+              padding-top: 10px;
               margin: 0;
+              -webkit-text-stroke: 1px $white;
+              text-stroke: 1px $white;
               @media only screen and (max-width: 1200px) {
-                font-size: 104px;
-                padding-top: 13px;
+                font-size: 30px;
+                padding-top: 5px;
               }
             }
           }
@@ -153,8 +155,12 @@
     .fz_product_right {
       display: flex;
       justify-content: flex-end;
-      padding-top: 120px;
+      padding-top: 178px!important;
 
+      @media screen and (max-height: 768px) {
+          padding-top: 110px!important;
+
+      }
       @media screen and (max-width: 1200px) {
         display: none;
       }
