--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -38,8 +38,8 @@
               color: $black;
               padding-top: 10px;
               margin: 0;
-              -webkit-text-stroke: 1px $white;
-              text-stroke: 1px $white;
+              -webkit-text-stroke: 1px #1ca999;
+              text-stroke: 1px #1ca999;
               @media only screen and (max-width: 1200px) {
                 font-size: 30px;
                 padding-top: 5px;
