--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -59,7 +59,7 @@
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
-  color: #ffffff;
+  color: #e1e1e1;
   border-radius: 16px !important;
 }
 @media screen and (max-width: 768px) {
@@ -92,7 +92,8 @@
 .faq_section .accordion-body {
   font-size: 14px;
   background-color: #000000;
-  color: #ffffff;
+  font-weight: 300;
+  color: rgba(163, 163, 163, 0.568627451);
   border-radius: 16px !important;
   padding: 0px 20px 20px;
 }
