--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -266,11 +266,7 @@ header .fz_sigin ul li:last-child a {
   border-radius: 5px;
   border: 1px solid #ffffff;
   --border-angle: 0turn;
-  --main-bg: conic-gradient(
-    from var(--border-angle),
-    #1a2c2a 0%,
-    #1a2c2a 100%
-  );
+  --main-bg:conic-gradient(from var(--border-angle), #007164 0%, #007264 100%);
   border: solid 1px transparent;
   --gradient-border: conic-gradient(
     from var(--border-angle),
@@ -1632,8 +1628,8 @@ header .fz_sigin ul li:last-child a {
   color: #000000;
   padding-top: 10px;
   margin: 0;
-  -webkit-text-stroke: 1px #ffffff;
-  text-stroke: 1px #ffffff;
+  -webkit-text-stroke: 1px #1ca999;
+  text-stroke: 1px #1ca999;
 }
 @media only screen and (max-width: 1200px) {
   .fz_product_sec .container .fz_product_left .fz_sub_container .fz_content .fz_num h2 {
@@ -2495,7 +2491,10 @@ header .fz_sigin ul li:last-child a {
   }
 }
 .fz-blog .item:hover .card-body {
-  bottom: 0px;
+  height: 100%;
+}
+.fz-blog .item:hover .card-body .card-text {
+  max-height: 220px;
 }
 .fz-blog .item:hover img {
   transform: scale(1.1);
@@ -2518,9 +2517,13 @@ header .fz_sigin ul li:last-child a {
   border-radius: 0 0 8px 8px;
   margin: 0 auto;
   position: absolute;
-  bottom: -46px;
-  transition: all 0.6s ease-out;
+  height: 28%;
+  bottom: 0px;
+  transition: all 1s ease;
   background: linear-gradient(rgba(0, 0, 0, 0.04), rgb(0, 0, 0), #000000);
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
 @media screen and (max-width: 991px) {
   .fz-blog .item .card-body {
@@ -2548,57 +2551,15 @@ header .fz_sigin ul li:last-child a {
   line-height: 24px;
   font-weight: 300;
   margin-bottom: 2rem;
+  max-height: 46px;
+  overflow: hidden;
+  transition: all 1s ease;
 }
 @media screen and (max-width: 991px) {
   .fz-blog .item .card-body .card-text {
     font-size: 14px;
     line-height: 22px;
   }
-}
-.fz-blog .item .card-body .collapsible {
-  max-height: 46px;
-  overflow: hidden;
-  transition: all 0.8s ease-out;
-}
-.fz-blog .item .card-body .collapsible.expanded {
-  max-height: 220px;
-}
-.fz-blog .item .card-body .card-top-title {
-  display: flex;
-  justify-content: space-between;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 18px;
-  padding: 34px 0 28px 0;
-}
-@media screen and (max-width: 991px) {
-  .fz-blog .item .card-body .card-top-title {
-    padding: 15px 0 10px 0;
-  }
-}
-.fz-blog .item .card-body button {
-  color: #3eab90;
-  border-radius: 32px;
-  font-size: 14px;
-  padding: 0;
-  margin-bottom: 10px;
-  background: transparent !important;
-  border: none;
-}
-.fz-blog .item .card-body button:hover {
-  color: #f7c35f;
-}
-.fz-blog .item .card-body .read-more-btn.less {
-  color: #3eab90; /* Green color for "Read less" */
-}
-.fz-blog .item .card-body .read-more-btn.less:hover {
-  color: #f7c35f;
-}
-.fz-blog .owl-carousel .owl-item {
-  pointer-events: none; /* Prevent interactions on non-visible slides */
-}
-.fz-blog .owl-carousel .owl-item.active {
-  pointer-events: auto; /* Allow interactions on visible slides */
 }
 .fz-blog .owl-carousel .owl-stage {
   display: flex;
@@ -2808,7 +2769,7 @@ header .fz_sigin ul li:last-child a {
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
-  color: #ffffff;
+  color: #e1e1e1;
   border-radius: 16px !important;
 }
 @media screen and (max-width: 768px) {
@@ -2841,7 +2802,8 @@ header .fz_sigin ul li:last-child a {
 .faq_section .accordion-body {
   font-size: 14px;
   background-color: #000000;
-  color: #ffffff;
+  font-weight: 300;
+  color: rgba(163, 163, 163, 0.568627451);
   border-radius: 16px !important;
   padding: 0px 20px 20px;
 }
