--- a/assets/css/sass/blog.scss
+++ b/assets/css/sass/blog.scss
@@ -62,7 +62,10 @@
 
     &:hover {
       .card-body {
-        bottom: 0px;
+        height: 100%;
+        .card-text{
+          max-height: 220px;
+        }
       }
       img {
         transform: scale(1.1);
@@ -86,9 +89,13 @@
       border-radius: 0 0 8px 8px;
       margin: 0 auto;
       position: absolute;
-      bottom: -46px;
-      transition: all 0.6s ease-out;
+      height: 28%;
+      bottom: 0px;
+      transition: all 1s ease;
       background: linear-gradient(rgb(0 0 0 / 4%), rgb(0 0 0), #000000);
+      display: flex;
+      flex-direction: column;
+      justify-content: end;
       @media screen and (max-width: 991px) {
         width: 100%;
         padding: 0px 25px 30px 24px;
@@ -113,61 +120,64 @@
         line-height: 24px;
         font-weight: 300;
         margin-bottom: 2rem;
+        max-height: 46px;
+        overflow: hidden;
+        transition: all 1s ease;
         @media screen and (max-width: 991px) {
           font-size: 14px;
           line-height: 22px;
         }
       }
-      .collapsible {
-        max-height: 46px;
-        overflow: hidden;
-        transition: all 0.8s ease-out;
-      }
+      // .collapsible {
+      //   max-height: 46px;
+      //   overflow: hidden;
+      //   transition: all 0.8s ease-out;
+      // }
 
-      .collapsible.expanded {
-        max-height: 220px;
-      }
+      // .collapsible.expanded {
+      //   max-height: 220px;
+      // }
 
-      .card-top-title {
-        display: flex;
-        justify-content: space-between;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 18px;
-        padding: 34px 0 28px 0;
+      // .card-top-title {
+      //   display: flex;
+      //   justify-content: space-between;
+      //   font-size: 16px;
+      //   font-weight: 500;
+      //   line-height: 18px;
+      //   padding: 34px 0 28px 0;
 
-        @media screen and (max-width: 991px) {
-          padding: 15px 0 10px 0;
-        }
-      }
-      button {
-        color: $primary-color;
-        border-radius: 32px;
-        font-size: 14px;
-        padding: 0;
-        margin-bottom: 10px;
-        background: transparent !important;
-        border: none;
-        &:hover {
-          color: $secondary-color;
-        }
-      }
-      .read-more-btn.less {
-        color: $primary-color; /* Green color for "Read less" */
-        &:hover {
-          color: $secondary-color;
-        }
-      }
+      //   @media screen and (max-width: 991px) {
+      //     padding: 15px 0 10px 0;
+      //   }
+      // }
+      // button {
+      //   color: $primary-color;
+      //   border-radius: 32px;
+      //   font-size: 14px;
+      //   padding: 0;
+      //   margin-bottom: 10px;
+      //   background: transparent !important;
+      //   border: none;
+      //   &:hover {
+      //     color: $secondary-color;
+      //   }
+      // }
+      // .read-more-btn.less {
+      //   color: $primary-color; /* Green color for "Read less" */
+      //   &:hover {
+      //     color: $secondary-color;
+      //   }
+      // }
     }
   }
 
   .owl-carousel {
-    .owl-item {
-      pointer-events: none; /* Prevent interactions on non-visible slides */
-    }
-    .owl-item.active {
-      pointer-events: auto; /* Allow interactions on visible slides */
-    }
+    // .owl-item {
+    //   pointer-events: none; /* Prevent interactions on non-visible slides */
+    // }
+    // .owl-item.active {
+    //   pointer-events: auto; /* Allow interactions on visible slides */
+    // }
     .owl-stage {
       display: flex;
       align-items: center;
