--- a/assets/css/sass/faq.scss
+++ b/assets/css/sass/faq.scss
@@ -48,7 +48,7 @@
         text-align: left;
         text-underline-position: from-font;
         text-decoration-skip-ink: none;
-        color: $white;
+        color: #e1e1e1;
         border-radius: 16px !important;
 
         
@@ -80,7 +80,8 @@
       .accordion-body{
         font-size: 14px;
         background-color: $black;
-        color: $white;
+        font-weight: 300;
+        color: #a3a3a391;
         border-radius: 16px !important;
         padding: 0px 20px 20px;
       }
