--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -211,11 +211,12 @@ header {
             border: 1px solid $white;
             --border-angle: 0turn;
 
-            --main-bg: conic-gradient(
-              from var(--border-angle),
-              #1a2c2a 0%,
-              #1a2c2a 100%
-            );
+            // --main-bg: conic-gradient(
+            //   from var(--border-angle),
+            //   #1a2c2a 0%,
+            //   #1a2c2a 100%
+            // );
+            --main-bg:conic-gradient(from var(--border-angle), #007164 0%, #007264 100%);
             border: solid 1px transparent;
 
             --gradient-border: conic-gradient(
