--- a/assets/css/sass/features.scss
+++ b/assets/css/sass/features.scss
@@ -290,9 +290,16 @@
                         // min-height: 480px;
                         padding: 0px 50px;
                         position: relative;
-                        
+                        @media screen and (max-width: 767px) {
+                          width:100%;
+                          //  padding:0px 80px;
+                        }
                         @media screen and (min-width: 768px) and (max-width: 991px) {
                           width: calc(50% - 20px);
+                          padding: 0px 30px;
+                        }
+                        @media screen and (min-width: 992px) and (max-width: 1199px) {
+                          padding: 0px 30px;
                         }
                         svg{
                           width: 100%;
@@ -314,18 +321,22 @@
                             padding: 0px;
                             border-bottom-left-radius: 8px;
                             border-bottom-right-radius: 8px;
-                            @media screen and (min-width: 991px) and (max-width: 1400px) {
-                              min-height: 236px;
-                            }
+                            // @media screen and (min-width: 991px) and (max-width: 1400px) {
+                            //   min-height: 236px;
+                            // }
                             h3 {
                                 color: $primary-color;
                                 font-size: 20px;
                                 font-weight: 500;
                                 line-height: 36px;
-                                @media screen and (max-width: 767px) {
-                                 font-size: 18px;
-                                 line-height: 28px;
+                                @media screen and (max-width: 1199px) {
+                                 font-size: 16px;
+                                 line-height: 18px;
                                 }
+                         @media screen and (min-width: 1200px) and (max-width: 1400px) {
+                            font-size: 16px;
+                          line-height: 18px;
+                           }
                             }
                             p {
                                 color: $white;
@@ -333,9 +344,11 @@
                                 font-weight: 200;
                                 line-height: 22px;
                                 min-height: 60px;
-                                @media screen and (max-width: 767px) {
-                                  font-size: 14px;
-                                  line-height: 20px;
+                                
+                                @media screen and (max-width: 1400px) {
+                                  font-size: 13px;
+                                  line-height: 18px;
+                                 
                                  }
                             }
                             a {
@@ -352,7 +365,14 @@
                               img {
                                 width: 30px;
                                 height: 50px;
+                                @media screen and (max-width: 767px) {
+                                  height:auto;
+                                }
                               }
+                               @media screen and (min-width: 991px) and (max-width: 1199px) {
+                                 position: relative;
+                                 top:-26px;
+                            }
                             }
                         }
                     }
@@ -361,3 +381,4 @@
         }
     }
 }
+
